--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">DATA</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -44,4 +45,11 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="email"><font fgcolor='#FF8E8E93'>Email</font></string>
+    <string name="confirm_password"><font fgcolor='#FF8E8E93'>Confirm Password</font></string>
+    <string name="sign_up">Sign Up</string>
+    <string name="password"><font fgcolor='#FF8E8E93'>Password</font></string>
+    <string name="already_an_user_login">Already an user? Login</string>
+    <string name="sign_in">Sign in</string>
+    <string name="not_yet_registered_sign_up">Not yet registered? Sign up</string>
 </resources>
